GCP/cloud-engineer-skill-projects/06-gke-production-platform/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: platform-demo
spec:
  podSelector: {}
  policyTypes:
    - Ingress
